deploy/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mattermod
  annotations:
    kubernetes.io/ingress.class: ambassador
    cert-manager.io/cluster-issuer: letsencrypt-prod
    getambassador.io/ambassador-id: public
spec:
  tls:
    - hosts:
        - mattermod.mattermost.com
      secretName: mattermod-tls
  rules:
    - host: mattermod.mattermost.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mattermod
              servicePort: 8080
